tests/sksl/errors/StructTooDeeplyNested.glsl
### Compilation failed:

error: 9: struct 'too_deep' is too deeply nested
struct too_deep { S8 x; };
^^^^^^^^^^^^^^^^^^^^^^^^^
1 error
